{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 72,
  "lineage": "3ac9dd36-5949-ca02-66da-4fe04ee3a531",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:284653339310:internet-gateway/igw-023f3c4890b7dec40",
            "id": "igw-023f3c4890b7dec40",
            "owner_id": "284653339310",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-054ff384547c9592e"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:284653339310:loadbalancer/app/lb1/51d4eac19b0bad8f",
            "arn_suffix": "app/lb1/51d4eac19b0bad8f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb1-1641179958.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:284653339310:loadbalancer/app/lb1/51d4eac19b0bad8f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb1",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00fad9610e0902a80"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-094e012dc113cdd93"
              },
              {
                "subnet_id": "subnet-096cf74d0abd17f14"
              }
            ],
            "subnets": [
              "subnet-094e012dc113cdd93",
              "subnet-096cf74d0abd17f14"
            ],
            "vpc_id": "vpc-054ff384547c9592e",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.lbasg",
            "aws_subnet.pub1",
            "aws_subnet.pub2",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:284653339310:listener/app/lb1/51d4eac19b0bad8f/bcee86716c233efa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:284653339310:targetgroup/tg1/cc5a5eeaf0ec9062",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:284653339310:listener/app/lb1/51d4eac19b0bad8f/bcee86716c233efa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:284653339310:loadbalancer/app/lb1/51d4eac19b0bad8f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb1",
            "aws_lb_target_group.tg1",
            "aws_security_group.lbasg",
            "aws_subnet.pub1",
            "aws_subnet.pub2",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:284653339310:targetgroup/tg1/cc5a5eeaf0ec9062",
            "arn_suffix": "targetgroup/tg1/cc5a5eeaf0ec9062",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/login",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:284653339310:targetgroup/tg1/cc5a5eeaf0ec9062",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-054ff384547c9592e"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dmzrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:284653339310:route-table/rtb-08bfce4596ce3316c",
            "id": "rtb-08bfce4596ce3316c",
            "owner_id": "284653339310",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-023f3c4890b7dec40",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dmzrt"
            },
            "tags_all": {
              "Name": "dmzrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-054ff384547c9592e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prirt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:284653339310:route-table/rtb-0337e6eeb8ba9a7f6",
            "id": "rtb-0337e6eeb8ba9a7f6",
            "owner_id": "284653339310",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prirt"
            },
            "tags_all": {
              "Name": "prirt"
            },
            "timeouts": null,
            "vpc_id": "vpc-054ff384547c9592e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:284653339310:route-table/rtb-095800c53b5ab1a18",
            "id": "rtb-095800c53b5ab1a18",
            "owner_id": "284653339310",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-023f3c4890b7dec40",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pubrt"
            },
            "tags_all": {
              "Name": "pubrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-054ff384547c9592e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd6b62a0213be12b",
            "route_table_id": "rtb-095800c53b5ab1a18",
            "subnet_id": "subnet-096cf74d0abd17f14"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pubrt",
            "aws_subnet.pub1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fccdc6e1e68c87ec",
            "route_table_id": "rtb-08bfce4596ce3316c",
            "subnet_id": "subnet-0b7d96c1c620eaceb"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.dmzrt",
            "aws_subnet.dmz1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e66930c5d2b78d1",
            "route_table_id": "rtb-0337e6eeb8ba9a7f6",
            "subnet_id": "subnet-0c3d2c00fd4aceaf0"
          },
          "dependencies": [
            "aws_route_table.prirt",
            "aws_subnet.pri1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9ceda214ac3e194",
            "route_table_id": "rtb-095800c53b5ab1a18",
            "subnet_id": "subnet-094e012dc113cdd93"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pubrt",
            "aws_subnet.pub2",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed40d7805baa3440",
            "route_table_id": "rtb-08bfce4596ce3316c",
            "subnet_id": "subnet-0847faf0bcc142564"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.dmzrt",
            "aws_subnet.dmz2",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "f",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ccbceec6ced8abd",
            "route_table_id": "rtb-0337e6eeb8ba9a7f6",
            "subnet_id": "subnet-039db1c156c203101"
          },
          "dependencies": [
            "aws_route_table.prirt",
            "aws_subnet.pri2",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lbasg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:284653339310:security-group/sg-00fad9610e0902a80",
            "description": "Allow ssh http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00fad9610e0902a80",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lbasg",
            "name_prefix": "",
            "owner_id": "284653339310",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lbasg"
            },
            "tags_all": {
              "Name": "lbasg"
            },
            "timeouts": null,
            "vpc_id": "vpc-054ff384547c9592e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dmz1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:284653339310:subnet/subnet-0b7d96c1c620eaceb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7d96c1c620eaceb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "284653339310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dmzsub1"
            },
            "tags_all": {
              "Name": "dmzsub1"
            },
            "vpc_id": "vpc-054ff384547c9592e"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dmz2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:284653339310:subnet/subnet-0847faf0bcc142564",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0847faf0bcc142564",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "284653339310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dmzsub2"
            },
            "tags_all": {
              "Name": "dmzsub2"
            },
            "vpc_id": "vpc-054ff384547c9592e"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:284653339310:subnet/subnet-0c3d2c00fd4aceaf0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3d2c00fd4aceaf0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "284653339310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prisub1"
            },
            "tags_all": {
              "Name": "prisub1"
            },
            "vpc_id": "vpc-054ff384547c9592e"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:284653339310:subnet/subnet-039db1c156c203101",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039db1c156c203101",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "284653339310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pubsub2"
            },
            "tags_all": {
              "Name": "pubsub2"
            },
            "vpc_id": "vpc-054ff384547c9592e"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:284653339310:subnet/subnet-096cf74d0abd17f14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096cf74d0abd17f14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "284653339310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pubsub1"
            },
            "tags_all": {
              "Name": "pubsub1"
            },
            "vpc_id": "vpc-054ff384547c9592e"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:284653339310:subnet/subnet-094e012dc113cdd93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094e012dc113cdd93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "284653339310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pubsub2"
            },
            "tags_all": {
              "Name": "pubsub2"
            },
            "vpc_id": "vpc-054ff384547c9592e"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:284653339310:vpc/vpc-054ff384547c9592e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-03dbdb4190b607a2d",
            "default_route_table_id": "rtb-070126814377ddbf3",
            "default_security_group_id": "sg-0df646e3e340733d8",
            "dhcp_options_id": "dopt-0d4927773000a5dc4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-054ff384547c9592e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-070126814377ddbf3",
            "owner_id": "284653339310",
            "tags": {
              "Name": "vpc1"
            },
            "tags_all": {
              "Name": "vpc1"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}